Update the install process to FenixEdu 3.x